data/test/result/20260112_150501_USERINPUT_test_01_kill.py_4a52e0cd.txt
Test: test_01_kill.py
Tool: USERINPUT
Time: 2026-01-12T15:05:01.876989
Status: Failed
----------------------------------------
E
======================================================================
ERROR: test_01_kill (unittest.loader._FailedTest.test_01_kill)
----------------------------------------------------------------------
ImportError: Failed to import test module: test_01_kill
Traceback (most recent call last):
  File "/Users/wukunhuan/.pyenv/versions/3.11.9/lib/python3.11/unittest/loader.py", line 162, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/Applications/AITerminalTools/tool/USERINPUT/test/test_01_kill.py", line 6, in <module>
    import psutil
ModuleNotFoundError: No module named 'psutil'


----------------------------------------------------------------------
Ran 1 test in 0.000s

FAILED (errors=1)
